bug 22993 (trim white space from link files)